- Updated to OpenLayers-2.8 and Prototype-1.6.1 - Internet Explorer 8 is now supported - Cookies now expire after 60 days instead of at the end of the session - Cookies renamed - Visibility of layers is now saved in the cookie - Bus stop overlay is no longer displayed in the layer switcher - The current scheme is now included in the permalink - Reorganised script directory and put OpenLayers in its own directory - Added scriptaculous 1.8.3 - The "Edit in Potlatch" link displays a warning if Potlatch is already running - The "Edit in JOSM" link does not open a new browser window anymore

--- a/novam/novam/public/widgets.css
+++ b/novam/novam/public/widgets.css
@@ -118,6 +118,32 @@ p.StopViewer
 	text-align: right;
 }
 
+object.StopViewer
+{
+	/* display: none does not work here as Opera
+	 * won't attempt to load the object in this 
+	 * case (I have not checked other browsers).
+	 */
+	width: 0px; 
+	height: 0px; 
+}
+
+div.StopViewer.FlashMessage
+{
+	position: absolute;
+	left: 10%;
+	right: 10%;
+	top: 33px;
+
+	border: 1px solid black;
+
+	padding: 5px;
+
+	text-align: center;
+
+	background-color: white;
+}
+
 /*
  * Map Key
  */
